Timestamps added to chat

--- a/chat/html/index.html
+++ b/chat/html/index.html
@@ -37,8 +37,11 @@ $(document).ready(function() {
 
         author = $("author", message).text();
         content = $("text", message).text();
+        time = new Date();
+        time.setTime(timestamp*1000)
 
-        $("#messagewindow").prepend("<b>" + author + "</b>:" + content 
+        $("#messagewindow").prepend("<i>[" + time.toLocaleString() + "] </i>" + "<b>" 
+                                    + author + "</b>:" + content 
                                     + "<br>");
      });
   };
